option java_package = "protobuf.clazz";
option java_outer_classname = "Common";

//平台玩法规则
message CommonAppConfigProto {
	required int32 app_id = 1;
	repeated CommonGameConfigProto configs = 2;
	optional int32 open_count = 3; // 剩下代开房出现。
}

message CommonGameConfigProto {
	required int32 game_type_index = 1;
	repeated RuleGroupConfig groups = 2;
	repeated int32 game_round = 3; //局数
	optional string name = 4; //
	repeated int32 cost_card = 5; //对应的扣逗数
	optional bool isFree = 6; // 是否免费
	optional string fun = 7;
	repeated RuleGroupConfig commonGroups = 8; // 所有子游戏通用group
	repeated int32 need_club_cost = 9; // 是否需要俱乐部扣逗 1.表示俱乐部扣逗
	repeated int32 club_cost = 10; // 俱乐部扣逗
	repeated int32 voiceCost = 11; //语音房
}

message RuleGroupConfig {
	required int32 type = 1; // 0点选 1.复选 2.增减控件
	required string selectedIds = 2; // 默认选中 多个用,号分开
	required string desc = 3; // 组描述
	repeated RuleConfig rules = 4; // 角色
}

message RuleConfig {
	required int32 rule_index = 1; //id 和之前的game_rule对应
	required string desc = 2; //规则描述
	optional int32 line = 3; // 逻辑上显示的行号,从1开始计数,自动适配换
	optional string mode = 4; //可见状态 0任何状态可见，用逗号分隔各状态
	optional string switch = 5; //切换状态
	optional string value = 6; // 值
	optional string based = 7; // 选中时这里面ruleId 也会选上 （,分隔）
	optional string excludes = 8; // 选中时这里面配置的ruleId就不能选
	optional string tips = 9; // tips
}

message CommonGameRulesProto {
	repeated CommonGameRuleProto rules = 1;
}

message CommonGameRuleProto {
	optional int32 rule_id = 1;
	optional int32 value = 2;
}

message GameRuleRequest {
	required int32 id = 1; //appid 或gameid 根据协议类型
}

// 客户端代理房间请求
message GameProxyRoomCountReuqest{

}
message GameProxyRoomCountResponse{
	optional int32 open_count = 1; // 剩下代开房出现。
}

// 告诉客户端玩法重置了
message GameRuleResetResponse{

}

message ProxyRoomAppIdsProto{
	repeated int32 appIds = 1;
}

//子游戏信息
message AppItemProto {
	required int32 appId = 1; //子游戏 appId
	required string packagepath = 2; //包名
	required string version = 3; //版本
	required string iconUrl = 4; //图标Url
	required int32 status = 5; //游戏状态;    0 未发布  1 发布;
	required int32 order = 6; //游戏的次序  展示的顺序值， 从小到大。
	required int32 flag = 7; //游戏的标记  （new、hot、活动、比赛）;
	required int32 packagesize = 8; //子游戏包的大小
	optional string downUrl = 9; //最新整包下载路径
	optional string appName = 10; //游戏名字
	optional int32 gameType = 11; //游戏类型
}

message NoticeProto {
	optional string content = 1; // 广播内容
	optional int32 broad_num = 2; // 广告次数
	optional int32 broad_type = 3; // 广播类型 1.比赛内 2.app内
	optional int32 interval = 4; // 播放间隔
}

message ChatMsgReq{
	required string chatMsg = 1;
	optional int32 chatType = 2; // 1-普通聊天 2-语音聊天
	optional bytes voiceMsg = 3; // 语音内容
}

message ChatMsgRsp{
	required string chatMsg = 1;
}

message CommonII{
	required int32 k = 1;
	required int32 v = 2;
}

message CommonIII{
	required int32 k = 1;
	required int32 v1 = 2;
	required int32 v2 = 3;
}

message CommonLI{
	required int64 k = 1;
	required int32 v = 2;
}

message CommonIL{
	required int32 k = 1;
	required int64 v = 2;
}

message CommonLL{
	required int64 k = 1;
	required int64 v = 2;
}

message CommonILI{
	required int32 k = 1;
	required int64 v1 = 2;
	optional int32 v2 = 3;
}

message CommonLII{
	required int64 k = 1;
	required int32 v1 = 2;
	optional int32 v2 = 3;
}

message CommonSII{
	required string k = 1;
	optional int32 v1 = 2;
	optional int32 v2 = 3;
}

message CommonSLI{
	required string k = 1;
	optional int64 v1 = 2;
	optional int32 v2 = 3;
}

message CommonLS{
	required int64 k = 1;
	optional string v = 2;
}

message CommonIS{
	required int32 k = 1;
	optional string v = 2;
}
message CommonRankInfoProto {
	required int32 rank = 1; //排名
	optional string head = 2; //头像
	optional string nickName = 3; //昵称
	optional int64 accountId = 4; //帐号ID
	optional string signature = 5; //签名
	optional int64 value = 6; //数值
	optional bool isDisband = 7; // 是否解散(俱乐部自建赛排行榜用)
}

//手机绑定/登陆
message PhoneReqProto {
	required string mobile = 1;
	required string identifyCode = 2; //校验码
}

/**
 * 游戏大类型
 */
enum GameType{
	MJ = 1; // 麻将
	PK = 2; // 扑克
	ZP = 3; // 字牌
	QT = 4; // 其他
}